--- a/css/common.css
+++ b/css/common.css
@@ -22,13 +22,17 @@
   
 
 P {
-    font-size: 10px;
+    font-size: 12px;
     line-height: 15px;
     margin-left: 10px;
 }
 
 h3 {
     font-size: 25px;
+}
+
+h4 {
+    font-size: 20px;
 }
 
 * ul li  {
@@ -73,4 +77,10 @@ h3 {
 .right-group img {
     width: 100px ;
     filter: invert();
+}
+
+ .column hr {
+    width: 50px;
+    margin-left: 30px;
+    margin-top: 20px;
 }
