--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,21 @@
 
  header nav {
     background-color: white;
-    max-width:100%;
+    max-width:100vw;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 5px;
-}
+    
+ }
+
+ #conteiner-nav-bar {
+    position: fixed;
+    width: 100%;
+    z-index: 30px;
+    top: 0px;
+    left: 0px;
+ }
 
 .logo img {
    max-width: 80px;
@@ -20,7 +29,12 @@
  }
  
 .nav-bar.left {
-    margin-right: 500px;
+    width: 60% ;
+}
+
+.nav-bar.right {
+    width: 50%;
+    margin-left: 200px;
 }
 
 /* STYLE SECTION container-infoDropBox*/
@@ -64,16 +78,21 @@
 
 .icon-arrow {
     padding: 10px;
+    margin-top: 20px;
 }
 
 /* STYLE SECTION BUSINESS PLAN */
+
+.business-plan {
+    margin-top: 100px;
+}
 
 .container-span span {
     font-size: 12px;
 }
 
 .container-span {
-    margin: 0px 0px 30px 5px;
+    margin: 20px 0px 30px 5px;
 }
 
 .fa-circle-dot, .fa-circle {
