--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,16 @@
     margin-bottom: 150px;
 }
 
+#info-operation h4 {
+     text-align: center;
+}
+
+#info-operation p {
+    max-width: 180px;
+    text-align: center;
+    margin-left: 40px;
+}
+
 .small-box  {
     width: calc(90% / 3);
     margin: 5px;
