--- a/css/common.css
+++ b/css/common.css
@@ -85,31 +85,56 @@ h4 {
     position: relative;
 }
 
-#menu-bar, .response-faq  {
+.menu-content {
     display: none;
-    margin: 0 auto;
     background-color: lightgray;
-}
-
-#menu-bar li {
-    list-style: none;
-    display: block;
-    padding: 10px 5px;
-}
-
-a:hover + #menu-bar {
-    display: block;
-     position: absolute;
-     z-index:1; 
-  }
-
-.nav-bar a:hover {
-    border-bottom: #0061ff;
-}
-
-.arrow-icon:hover  .response-faq  {
-    display: block;
     position: absolute;
-    z-index:1;
-    
+    left: 0px;
+    top: 40px;
+    background-color: #f9f9f9;
+    width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
 }
+
+.menu-bar li {
+    list-style: none;
+    font-size: 13px;
+    padding: 15px 5px;
+}
+
+.menu-bar .bold {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.menu-bar:hover  .menu-content {
+    display: block;
+}
+
+.menu-bar li:hover {
+    background-color: lightgray;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 20px;
+    top: 60px;
+    background-color: #f9f9f9;
+    width: 660px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
